# emgutf

./: .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  proto-gen.bat
Emgu.TF/: AttrMetadata.cs  AttrType.cs  Buffer.cs  CMakeLists.txt  Emgu.TF.Shared.projitems  Emgu.TF.Shared.shproj  Emgu.TF.projitems  Emgu.TF.shproj  Function.cs  Graph.cs  Graph.g.cs  ILogSink.cs  ImportGraphDefOptions.cs  Input.cs  Library.cs  LogForwarderSink.cs  LogListenerSink.cs  Operation.cs  OperationDescription.cs  Output.cs  Server.cs  Session.cs  SessionOptions.cs  Status.cs  StatusChecker.cs  TFInvoke.cs  TString.cs  Tensor.cs  TfInvokeEntryPoints.cs  Toolbox.cs
Emgu.TF.Example/: CMakeLists.txt
Emgu.TF.Example/CVInterop/: App.config  CMakeLists.txt  CVInterop.NetCore.csproj  CVInterop.csproj  MainForm.Designer.cs  MainForm.cs  Program.cs  TensorConvert.cs  packages.config
Emgu.TF.Example/CVInterop.Lite/: CMakeLists.txt  CVInterop.Lite.Net.csproj  MainForm.Designer.cs  MainForm.cs
Emgu.TF.Example/Inception.Console/: CMakeLists.txt  Inception.Console.csproj  Program.cs
Emgu.TF.Example/Inception.Console.Lite/: CMakeLists.txt  Inception.Console.Lite.csproj  Program.cs  runtimeconfig.template.json
Emgu.TF.Example/Inception.Console.Lite.NetCore/: CMakeLists.txt  Inception.Console.Lite.NetCore.csproj  Program.cs
Emgu.TF.Example/Inception.Console.Lite.Netstandard/: Inception.Console.Lite.Netstandard.csproj  Program.cs
Emgu.TF.Example/Inception.Console.NetCore/: CMakeLists.txt  Inception.Console.NetCore.csproj  Program.cs  dotnet_run_raspberry_pi_os_arm
Emgu.TF.Example/Inception.Console.Netstandard/: Inception.Console.Netstandard.csproj  Program.cs
Emgu.TF.Example/InceptionObjectRecognition/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  InceptionObjectRecognition.csproj  MainForm.Designer.cs  MainForm.cs  Program.cs
Emgu.TF.Example/Mac/: Example.Mac.csproj  Example.OSX.csproj  Info.plist  Main.cs  ViewController.cs  ViewController.designer.cs
Emgu.TF.Example/Maui/: AboutPage.cs  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  InceptionModel.cs  MainPage.xaml  MainPage.xaml.cs  Maui.Demo.csproj  MauiProgram.cs  MultiboxDetectionModel.cs  README.md  ResnetModel.cs  StylizeModel.cs
Emgu.TF.Example/Maui.Lite/: AboutPage.cs  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  CocoSsdMobilenetPage.cs  InceptionPage.cs  MainPage.xaml  MainPage.xaml.cs  Maui.Demo.Lite.csproj  MauiProgram.cs  MobilenetPage.cs  ModelCheckerPage.cs  README.md
Emgu.TF.Example/MultiboxPeopleDetection/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  MainForm.Designer.cs  MainForm.cs  MultiboxPeopleDetection.csproj  Program.cs
Emgu.TF.Lite/: AllocationType.cs  BuildinOpResolver.cs  CMakeLists.txt  DataType.cs  DynamicBuffer.cs  Emgu.TF.Lite.Shared.shproj  Emgu.TF.Lite.projitems  Emgu.TF.Lite.shproj  FlatBufferModel.cs  GpuDelegate.cs  GpuDelegateV2.cs  IDelegate.cs  IOpResolver.cs  IntArray.cs  Interpreter.cs  InterpreterBuilder.cs  MutableOpResolver.cs  NNAPIDelegate.cs  StatefulNnApiDelegate.cs  Status.cs  TFLiteInvoke.cs  Tensor.cs  TfLiteInvokeEntryPoints.cs  Toolbox.cs  XNNPackDelegate.cs
Emgu.TF.Lite.Models/: CMakeLists.txt  CocoSsdMobilenet.cs  CocoSsdMobilenetV1.cs  CocoSsdMobilenetV3.cs  DownloadableModels.cs  Emgu.TF.Lite.Models.Shared.projitems  Emgu.TF.Lite.Models.Shared.shproj  Emgu.TF.Lite.Models.shproj  Emgu.TF.Models.vcxproj  ImageIO.cs  Inception.cs  Mobilenet.cs  Multibox.cs  SmartReply.cs  Stylize.cs
Emgu.TF.Lite.Models/Emgu.TF.Lite.Models.Android/: Emgu.TF.Lite.Models.Android.csproj
Emgu.TF.Lite.Models/Emgu.TF.Lite.Models.IOS/: Emgu.TF.Lite.Models.IOS.csproj
Emgu.TF.Lite.NetStandard/: CMakeLists.txt  Emgu.TF.Lite.NetStandard.csproj
Emgu.TF.Models/: CMakeLists.txt  DownloadableModels.cs  Emgu.TF.Models.Shared.projitems  Emgu.TF.Models.Shared.shproj  Emgu.TF.Models.csproj  Emgu.TF.Models.shproj  ImageIO.cs  Inception.cs  MaskRcnnInceptionV2Coco.cs  Multibox.cs  Resnet.cs  Stylize.cs
Emgu.TF.Protobuf/: AllocationDescription.g.cs  ApiDef.g.cs  AttrValue.g.cs  CMakeLists.txt  Cluster.g.cs  Config.g.cs  ControlFlow.g.cs  CostGraph.g.cs  CriticalSection.g.cs  Debug.g.cs  DeviceAttributes.g.cs  DeviceProperties.g.cs  Emgu.TF.Protobuf.Shared.projitems  ErrorCodes.g.cs  Extensions.cs  Function.g.cs  Graph.g.cs  GraphTransferInfo.g.cs  Iterator.g.cs  KernelDef.g.cs  LogMemory.g.cs  Master.g.cs  MasterService.g.cs  NamedTensor.g.cs  NodeDef.g.cs  OpDef.g.cs  OpGenOverrides.g.cs  QueueRunner.g.cs  ReaderBase.g.cs  RemoteFusedGraphExecuteInfo.g.cs  ResourceHandle.g.cs  RewriterConfig.g.cs  Saver.g.cs  StepStats.g.cs  Summary.g.cs  Tensor.g.cs  TensorBundle.g.cs  TensorDescription.g.cs  TensorShape.g.cs  TensorSlice.g.cs  (+4 more)
Emgu.TF.Runtime/: CMakeLists.txt  Emgu.TF.Lite.Runtime.Android.csproj  Emgu.TF.Lite.Runtime.Mac.shproj  Emgu.TF.Lite.Runtime.iOS.csproj  Emgu.TF.Runtime.Android.csproj  Emgu.TF.Runtime.Mac.projitems  Emgu.TF.Runtime.Unified.csproj  Emgu.TF.Runtime.Windows.csproj  Emgu.TF.Runtime.Windows.projitems  Emgu.TF.Runtime.Windows.shproj
Emgu.TF.Util/: CMakeLists.txt  DisposableObject.cs  Emgu.TF.Util.Shared.projitems  Emgu.TF.Util.Shared.shproj  Emgu.TF.Util.projitems  Emgu.TF.Util.shproj  EventArgs.cs  ICodeGenerable.cs  IInterpolatable.cs  PinnedArray.cs  Platform.cs  Toolbox.cs  TypeEnum.cs  UnmanagedObject.cs
Emgu.TF.World/: ApiDefinition.cs  CMakeLists.txt  Emgu.TF.Lite.Runtime.Android.csproj  Emgu.TF.Lite.Runtime.Mac.csproj  Emgu.TF.Lite.Runtime.Mac.projitems  Emgu.TF.Lite.Runtime.Windows.csproj  Emgu.TF.Lite.Runtime.Windows.projitems  Emgu.TF.Lite.Runtime.iOS.csproj  Emgu.TF.Lite.World.Android.csproj  Emgu.TF.Lite.World.csproj  Emgu.TF.Lite.World.iOS.csproj  Emgu.TF.Runtime.Android.csproj  Emgu.TF.Runtime.Net.csproj  Emgu.TF.Runtime.Unified.csproj  Emgu.TF.World.Android.csproj  Emgu.TF.World.Unified.csproj  Emgu.TF.World.csproj  Emgu.TF.World.iOS.csproj
miscellaneous/: CMakeLists.txt  Emgu.TF.Doxyfile  Emgu.TF.Lite.html.shfbproj  Emgu.TF.html.shfbproj  HeaderUpgradeScript.txt  build-unity-doc.bat  git-clean  git-clean.bat  kill_java_adb.bat
(+497 files in other folders)
